## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libFileOps.la
libFileOps_la_SOURCES = FileRecordHandler.c FileRecordHandler.h \
               StoreCpuData.c StoreCpuData.h \
               StoreNetData.c StoreNetData.h \
               StoreStorageData.c StoreStorageData.h \
               StoreVmData.c StoreVmData.h 

