## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libGetData.la
libGetData_la_SOURCES = GetProcStat.c GetProcStat.h \
            GetProcNetDev.c GetProcNetDev.h \
            GetProcDiskstats.c GetProcDiskstats.h \
            GetProcMeminfo.c GetProcMeminfo.h \
            GetProcVmstat.c GetProcVmstat.h

